gitops/vps/infra/forgejo/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`forge.m8t.io`)
      kind: Rule
      services:
        - name: forgejo-http
          port: 3000
  tls: {}
